Wed Feb 26 00:48:23 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc,matcher/synonympostlist.cc,
	  matcher/synonympostlist.h: In SynonymPostList, avoid fetching the
	  doclength if the weighting scheme doesn't need it and the calculated
	  wdf for the synonym in <= doclength_lower_bound for the current
	  subdatabase.  (fixes #360)

Wed Feb 26 00:12:22 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_changes.cc: Fix compilation without
	  --enable-assertions.

Tue Feb 25 02:33:14 GMT 2014  Olly Betts <olly@survex.com>

	* examples/quest.cc: Add --default-op option.

Tue Feb 25 01:56:34 GMT 2014  Olly Betts <olly@survex.com>

	* examples/quest.cc: Whitespace tweak.

Mon Feb 24 06:33:37 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_opsynonym.cc: Refactor symonym1 so that the test data is
	  specified by an array, rather than built up by code, so that the
	  actual testcases can be more easily seen.

Sun Feb 23 01:22:56 GMT 2014  Olly Betts <olly@survex.com>

	* common/bitstream.cc,common/bitstream.h: Add comments to better
	  document BitReader and BitWriter. (fixes#252)

Sun Feb 23 00:35:17 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING: Stop trying to explicitly list compilers which support
	  __builtin_expect (LLVM does too, others may as well).

Fri Feb 21 01:34:59 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/,backends/dbcheck.cc,common/,
	  docs/replication_protocol.rst,tests/api_backend.cc,
	  tests/api_replicate.cc: Keep track of unused blocks in the Btrees
	  using freelists rather than bitmaps.

Fri Feb 21 01:21:45 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Expand crashrecovery1 to check that the expected
	  base files exist and ones which shouldn't exist don't.

Thu Feb 20 00:34:47 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING: makeindex is now in Debian package texlive-binaries.

Wed Feb 19 06:50:58 GMT 2014  Olly Betts <olly@survex.com>
