@@ -108,6 +108,7 @@ class XAPIAN_VISIBILITY_DEFAULT Query {
 	OP_VALUE_GE = 11,
 	OP_VALUE_LE = 12,
 	OP_SYNONYM = 13,
+	OP_MAX = 14,
 
 	LEAF_TERM = 100,
 	LEAF_POSTING_SOURCE,
