@@ -1,7 +1,7 @@
 /* queryparser.cc: The non-lemon-generated parts of the QueryParser
  * class.
  *
- * Copyright (C) 2005,2006,2007,2008,2010,2011,2012 Olly Betts
+ * Copyright (C) 2005,2006,2007,2008,2010,2011,2012,2013 Olly Betts
  * Copyright (C) 2010 Adam Sjøgren
  *
  * This program is free software; you can redistribute it and/or
@@ -101,6 +101,7 @@ QueryParser::set_default_op(Query::op default_op)
 	case Query::OP_PHRASE:
 	case Query::OP_ELITE_SET:
 	case Query::OP_SYNONYM:
+	case Query::OP_MAX:
 	    // These are OK.
 	    break;
 	default:
@@ -115,8 +116,10 @@ QueryParser::set_default_op(Query::op default_op)
 		    "OP_PHRASE"
 		    ", "
 		    "OP_ELITE_SET"
+		    ", "
+		    "OP_SYNONYM"
 		    " or "
-		    "OP_SYNONYM");
+		    "OP_MAX");
     }
     internal->default_op = default_op;
 }
